[package]
name = "bittorrent-primitives"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"
authors = ["Jose Celano <josecelano@gmail.com>"]
description = " collections of basic types for BitTorrent projects"
repository = "https://github.com/torrust/bittorrent-primitives"
exclude = [".*", "cSpell.json", "rustfmt.toml"]

[dependencies]
aquatic_udp_protocol = "0.9.0"
binascii = "0.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
zerocopy = { version = "0.7", features = ["derive"] }
