[package]
authors = ["Jose Celano <josecelano@gmail.com>"]
description = "Foundational BitTorrent primitive types for Rust projects"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bittorrent-primitives"
readme = "README.md"
repository = "https://github.com/torrust/bittorrent-primitives"
version = "0.3.0"

[dependencies]
binascii = "0.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
